--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "NODE_ENV=development DEBUG=yunximao:* npm start"
+    "dev": "NODE_ENV=development PORT:9001 DEBUG=yunximao:* forever -w ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -34,5 +34,8 @@
     "svg-captcha": "^1.3.11",
     "umzug": "^2.1.0",
     "uuid": "^3.1.0"
+  },
+  "devDependencies": {
+    "forever": "^0.15.3"
   }
 }
