--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "dev": "NODE_ENV=development PORT:9001 DEBUG=yunximao:* forever -w ./bin/www"
+    "dev": "NODE_ENV=development PORT=9001 DEBUG=yunximao:* forever -w ./bin/www"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
